Update placeholder image, add justification classes and fix alignment

--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -25,7 +25,7 @@
 
 //Mixins
 @mixin vertical-align {
-  position: relative;
+  position: absolute;
   top: 50%;
   transform: translateY(-50%);
 }
