--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,7 +15,7 @@ body {
 
 	.container {
 		width: 80%;
-		max-width: 1024px;
+		max-width: 1095px;
 		display: block;
 		margin: 0 auto;
 		margin-top: 15%;
@@ -80,121 +80,85 @@ body {
 	}
 }
 
-
 .project {
-	$project-title-size: 3rem;
-	$project-title-color: #000;
-
-	$description-size: 1.3rem;
-	$description-color: rgba(0, 0, 0, .7);
-
-	height: 70vh;
 	width: 100%;
+	height: auto;
 	background-color: #f8faf7;
 	overflow: hidden;
-
-	.container {
-		@include vertical-align;
-		max-width: 1024px;
-		display: block;
-		margin: 0 auto;
-	}
+	position: relative;
 
 	&:nth-child(2n+1) {
 		background-color: white;
 	}
 
-	.description {
-		max-width: 400px;
-		width: 60%;
-		display: block;
-
-		h1 {
-			font-size: $project-title-size;
-			color: $project-title-color;
-			font-weight: $lg;
-			margin-bottom: 20px;
-		}
-
-		h2 {
-			font-size: $description-size;
-			color: $description-color; 
-			line-height: 2.4rem;
-			margin-bottom: 40px;
-		}
-
-		a {
-			text-decoration: none;
-			color: $link-color;
-			border-bottom: 2px rgba(0, 0, 0, 0) solid;			
-			transition: .2s ease-in-out;
-			padding-bottom: 10px;
-
-			&:hover {
-				color: darken($link-color, 30%);
-				border-bottom: 2px darken($link-color, 30%) solid;
-				padding-bottom: 3px;
-			}
-		}
-	}
-
-	.preview {
-		max-width: 500px;
-		width: 40%;
-		margin-left: auto;
-		display: block;
-
-		img {
-			max-width: 500px;
-			float: right;
-			transform: translateY(-370px);
-		}
-	}
-}
-
-@media only screen and (max-width: 1024px) {
-	
-	.land {
-		height: auto;
-		margin-bottom: 50px
-	}
-
-	.project {
-		height: 90vh;
-		.container {
-			width: 90%;
-		}
+	.container {
+		width: 80%;
+		max-width: 1095px;
+		margin: 0 auto;
+		margin-top: 100px;
+		position: relative;
+		display: flex;
+		flex-grow: 1;
 
 		.description {
-			width: 100%;
-			display: block;
-			
+			width: 600px;
+			height: auto;
+			max-width: 600px;
+			//background-color: red; // Debug
+
+			.text {
+				@include vertical-align;
+				margin-top: -50px;
+			}
+
+			.text-right {
+				right: 0;
+			}
+
+			.right {
+				text-align: right;
+			}
+
 			h1 {
-				font-size: 2rem;
+				font-size: 3rem;
+				font-weight: $lg;
+				margin-bottom: 20px;
 			}
 
 			h2 {
-				font-size: 1.2rem;
+				line-height: 2rem;
+				margin-bottom: 40px;
+				max-width: 470px;
 			}
 
+			a {
+				text-decoration: none;
+				color: $link-color;
+				border-bottom: 2px rgba(0, 0, 0, 0) solid;			
+				transition: .2s ease-in-out;
+				padding-bottom: 10px;
+
+				&:hover {
+					color: darken($link-color, 30%);
+					border-bottom: 2px darken($link-color, 30%) solid;
+					padding-bottom: 3px;
+				}
+			}
+
+			.right {
+				//TODO: Make this thing aligned to the right
+			}		
 		}
 
 		.preview {
-			width: 100%;
-			display: block;
+			width: 500px;
+			//background-color: green; // Debug
+			float: right;
+		
 			img {
-				display: none;
+				transform: translateY(4px);
+				max-width: 500px;
 			}
 		}
 	}
 }
-
-@media only screen and (min-width: 1200px) {
-	.project {
-		.preview {
-			img {
-				transform: translateY(-315px);
-			}
-		}
-	}
-} 
